// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check the Connector function it should be create a connector component when connector() is called with a component 1`] = `
<span>
  Moin
</span>
`;

exports[`Check the Connector function it should be updated the connector component when the exists state by the Context will be updated 1`] = `
<span>
  Moin
</span>
`;

exports[`Check the Connector function it should be updated the connector component when the exists state by the Context will be updated 2`] = `
<span>
  Moin
</span>
`;

exports[`Check the Connector function it should be updated the connector component when the props will be updated 1`] = `
<span>
  Moin
</span>
`;

exports[`Check the Connector function it should be updated the connector component when the props will be updated 2`] = `
<span>
  Moin Moin
</span>
`;

exports[`Check the Connector function it should be updated the connector component when the state by the Context will be updated 1`] = `
<span>
  Moin
</span>
`;

exports[`Check the Connector function it should be updated the connector component when the state by the Context will be updated 2`] = `
<span>
  Moin
  Bye
</span>
`;

exports[`Check the Connector function it should be updated twice the connector component when first the props and then the state will be updated 1`] = `
<span>
  Moin
</span>
`;

exports[`Check the Connector function it should be updated twice the connector component when first the props and then the state will be updated 2`] = `
<span>
  Moin Moin
</span>
`;

exports[`Check the Connector function it should be updated twice the connector component when first the props and then the state will be updated 3`] = `
<span>
  Moin Moin
  Bye Bye
</span>
`;

exports[`Check the Connector function it should be updated twice the connector component when first the state and then the props will be updated 1`] = `
<span>
  Moin
</span>
`;

exports[`Check the Connector function it should be updated twice the connector component when first the state and then the props will be updated 2`] = `
<span>
  Moin
  Bye Bye
</span>
`;

exports[`Check the Connector function it should be updated twice the connector component when first the state and then the props will be updated 3`] = `
<span>
  Moin Moin
  Bye Bye
</span>
`;
